--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
         <div class="container">
             <div class="row justify-content-center ">
                 <div class="col-md-8 py-5 text-white text-center">
-                    <h1 class="display-4">Build robust landing pages now</h1>
-                    <p class="my-4 home-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque quia
-                        sequi eius. Quas, totam aliquid. Repudiandae reiciendis vel excepturi ipsa voluptate dicta!</p>
-                    <a class="btn btn-primary p-3 me-1 my-2" href="#" role="button">Get Started </a>
-                    <a class="btn btn-outline-light home-btn p-3" href="#" role="button">My Portfolio</a>
+                    <h1 class="display-4">Bienvenidos</h1>
+                    <p class="my-4 home-text">A mi nueva pagina web</p>
+                    <a class="btn btn-primary p-3 me-1 my-2" href="#" role="button">Comenzar </a>
+                    <a class="btn btn-outline-light home-btn p-3" href="#" role="button">Mi Portafolio</a>
                 </div>
 
             </div>
@@ -69,11 +68,9 @@
     <section id="Services" class="services">
         <div class="container ">
             <div class="services__content text-center ">
-                <h5 class="text-primary">Services</h5>
-                <h1 class="my-2">Our Services</h1>
-                <p>Lorem ipsum dolor sit amet consectetur nisi necessitatibus repellat <br> distinctio eveniet eaque
-                    fuga
-                    in cumque optio consectetur harum vita <br> debitis sapiente praesentium aperiam aut</p>
+                <h5 class="text-primary">Servicios</h5>
+                <h1 class="my-2">Nuestros Servicios</h1>
+                <p>Ofrecemos <br> las mejores ofertas <br> en la plasita</p>
             </div>
             <div class="row g-4 mt-5">
                 <div class="col-lg-4 col-sm-6">
